# spawngate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY_FINDINGS.md  config.example.toml  demo-config.toml  paas-config.example.toml
.github/workflows/: ci.yml
src/: acme.rs  addons.rs  admin.rs  alerting.rs  api.rs  auth.rs  builder.rs  buildpacks.rs  config.rs  dashboard.rs  db.rs  docker.rs  domains.rs  dyno.rs  error.rs  git.rs  healthcheck.rs  instance.rs  lib.rs  loadbalancer.rs  main.rs  notifications.rs  pool.rs  process.rs  proxy.rs  secrets.rs  webhooks.rs
tests/: buildpacks_integration.rs  integration.rs  paas_integration.rs  scaling_tests.rs
tests/certs/: cert.pem  key.pem  openssl.cnf
tests/mock_server/: Cargo.toml
tests/mock_server/src/: main.rs
